<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/draweLayout"
    android:background="@drawable/bg2"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

<!--//Drower layout here-->


    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/drawer_header"
        app:menu="@menu/sidebar_menu"
        tools:ignore="MissingConstraints" />







    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:ignore="MissingConstraints">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                android:elevation="4dp" />

        </LinearLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!--    Headline here for title-->
        <ImageView
            android:id="@+id/humbMenu"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:clickable="true"
            android:contentDescription="@string/menu"
            android:focusable="true"
            app:srcCompat="@drawable/ic_baseline_menu_24"
            app:tint="@android:color/white" />
        <TextView
            android:id="@+id/textTitleHead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="60dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/booking_app"
            android:textColor="@android:color/white"
            android:textSize="34sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.605"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- Grid layout for homepage-->
        <GridLayout
            android:id="@+id/textVie"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_below="@+id/textTitleHead"
            android:layout_marginStart="10dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:columnCount="2"
            android:rowCount="2"
            tools:ignore="MissingConstraints">

            <androidx.cardview.widget.CardView
                android:id="@+id/btn1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_rowWeight="1"
                android:layout_column="0"
                android:layout_columnWeight="1"
                android:layout_gravity="fill"
                android:layout_margin="4dp"
                android:background="@drawable/card_backgroundrecent"
                app:cardCornerRadius="8dp"
                app:cardMaxElevation="8dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:gravity="center"
                    android:orientation="vertical"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/ic_baseline_home_24"
                        app:tint="#55CDDC" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/about_the_app"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textStyle="bold" />


                </LinearLayout>

            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:id="@+id/btn2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_rowWeight="1"
                android:layout_column="1"
                android:layout_columnWeight="1"
                android:layout_gravity="fill"
                android:layout_margin="4dp"

                android:background="@drawable/card_backgroundrecent"
                app:cardCornerRadius="8dp"
                app:cardMaxElevation="8dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/baseline_find_replace_24"
                        app:tint="#55CDDC" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Find a place"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textStyle="bold" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:id="@+id/btn3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="1"
                android:layout_rowWeight="1"
                android:layout_column="0"
                android:layout_columnWeight="1"
                android:layout_gravity="fill"
                android:layout_margin="4dp"
                android:background="@drawable/card_backgroundrecent"
                app:cardCornerRadius="8dp"
                app:cardMaxElevation="8dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/ic_baseline_new_releases_24"
                        app:tint="#55CDDC"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="whats new"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textStyle="bold" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:id="@+id/btn4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="1"
                android:layout_rowWeight="1"
                android:layout_column="1"
                android:layout_columnWeight="1"
                android:layout_gravity="fill"
                android:layout_margin="4dp"
                android:background="@drawable/card_backgroundrecent"
                app:cardCornerRadius="8dp"
                app:cardMaxElevation="8dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/ic_baseline_question_answer_24"
                        app:tint="#55CDDC"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="FQA"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textStyle="bold" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </GridLayout>



        <!--    bottom layout content-->
        <LinearLayout
            android:layout_gravity="center_vertical|center_horizontal"
            android:gravity="center"
            android:orientation="vertical"
            android:id="@+id/textViewsideway"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textVie"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:columnCount="2"
            android:background="#2C000000"
            android:rowCount="2"
            tools:ignore="MissingConstraints">





            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/recent_bookings"
                android:textColor="@android:color/white"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textSize="18sp"
                android:layout_marginBottom="8dp"/>


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewhome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:stackFromEnd="false"
                app:reverseLayout="false" />

        </LinearLayout>


        <!-- Coupon Layout -->
        <RelativeLayout
            android:id="@+id/coupon_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textViewsideway"
            android:layout_margin="8dp"
            android:background="@drawable/coupon_background">

            <!-- Coupon Background -->
            <View
                android:id="@+id/coupon_bg"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:background="@drawable/coupon_shape" />

            <!-- Coupon Title -->
            <TextView
                android:id="@+id/coupon_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="16dp"
                android:text="@string/special_offer"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

            <!-- Coupon Description -->
            <TextView
                android:id="@+id/coupon_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/coupon_title"
                android:layout_alignParentStart="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="18dp"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="6dp"
                android:text="@string/get_50_off_on_your_next_purchase"
                android:textColor="#55CDDC"
                android:textSize="14sp"
                app:tint="#55CDDC" />

            <!-- Coupon Code -->
            <TextView
                android:id="@+id/coupon_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="16dp"
                android:text="CODE123"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

            <!-- Decorative Divider -->
            <View
                android:id="@+id/divider"
                android:layout_width="2dp"
                android:layout_height="60dp"
                android:layout_centerVertical="true"
                android:layout_marginEnd="16dp"
                android:layout_toStartOf="@id/coupon_code"
                android:background="@android:color/white" />
        </RelativeLayout>



    </RelativeLayout>
    </ScrollView>

<RelativeLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <com.google.android.material.button.MaterialButton
        android:id="@+id/Sign_out_btn"
        style="?attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        app:tint="#55CDDC"
        android:elevation="100dp"
        app:cornerRadius="40dp"
        android:textSize="16sp"
        android:textStyle="bold"
        android:shadowColor="@color/Gray"
        android:layout_marginEnd="8dp"
        android:text="@string/sign_out"
        android:layout_alignParentBottom="true"
        android:layout_margin="16dp" />

</RelativeLayout>



</androidx.drawerlayout.widget.DrawerLayout>